# librhdl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/rhdc/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  wrapper.h
examples/rhdc/src/: RHDC.rs  comp.rs  console.rs  cstrings.rs  interpreter.rs  librhdl.rs  librhdl_access.rs  main.rs  resolve.rs  rhdc.rs  stdemerg.rs  util.rs  wod.rs
include/rhdl/: rhdl.h
include/rhdl/construction/: boundinterface.h  component.h  connectible.h  connectibleentity.h  connector.h  constructionexception.h  entityinterface.h  error.h  error.inc  exported.h  interfacible.h  partinterface.h  porthandle.h  structure.h  structureconnector.h  structuremode.h
rhdc_examples/: counter4.rhdc  xor.rhdc
src/: CMakeLists.txt  redstone.h
src/c_api/: CMakeLists.txt  c_api.cpp  cacheddynamiccvalue.cpp  cacheddynamiccvalue.h  cachednostructcvalue.cpp  cachednostructcvalue.h  cobject.cpp  cobject.h  cobjectimpl.h  cobjectreference.h  complexcobject.h  context.cpp  context.h  cstructtotypeid.h  cvalue.cpp  cvalue.h  cvaluecontainer.cpp  cvaluecontainer.h  cvalueobject.cpp  cvalueobject.h  cvaluetypetotypeid.h  dynamiccvalue.h  handle.cpp  handle.h  namespace.cpp  namespace.h  referencedcvalue.h  rootnamespace.cpp  rootnamespace.h  storedcvalue.cpp  storedcvalue.h  stringconversion.cpp  stringconversion.h  structurehandle.cpp  structurehandle.h  typedcobject.h  typedcomplexcobject.h  typedcvalue.cpp  typedcvalue.h  typedhandle.h  (+4 more)
src/construction/: CMakeLists.txt  boundinterface.cpp  buildsim.h  component.cpp  connectible.cpp  connectibleentity.cpp  connectionpredicate.cpp  connectionpredicate.h  connector.cpp  constructionexception.cpp  entityhandle.cpp  entityhandle.h  entityinterface.cpp  existingentityhandle.cpp  existingentityhandle.h  exported.cpp  interfacecompatexception.cpp  interfacecompatexception.h  interfacible.cpp  internalstructure.cpp  internalstructure.h  library.cpp  library.h  newentityhandle.cpp  newentityhandle.h  parthandle.cpp  parthandle.h  partinterface.cpp  porthandle.cpp  structure.cpp  structureconnector.cpp
src/entity/: CMakeLists.txt  einverter.cpp  einverter.h  entity.cpp  entity.h  representationcontainer.cpp  representationcontainer.h  timing.cpp  timing.h
src/init/: CMakeLists.txt  init.cpp  init.h
src/interface/: CMakeLists.txt  compositedirection.cpp  compositedirection.h  direction.cpp  direction.h  icomposite.cpp  icomposite.h  interface.cpp  interface.h  iplaceholder.cpp  iplaceholder.h  isingle.cpp  isingle.h  predicate.cpp  predicate.h
src/lib/: CMakeLists.txt  lib.cpp  lib.h
src/representation/: CMakeLists.txt  interfacemapping.h  mappedrepresentation.h  nsrep.sh  representation.cpp  representation.h  representationbase.cpp  representationbase.h  representations.cpp  representations.h  representationtype.cpp  representationtype.h  representationtypeid.h
src/simulation/: CMakeLists.txt  blockssim.cpp  blockssim.h  exposableinternalstatesim.cpp  exposableinternalstatesim.h  hierarchicalsim.cpp  hierarchicalsim.h  invertersim.cpp  invertersim.h  netlistsim.cpp  netlistsim.h  simfactory.cpp  simfactory.h  simulator.cpp  simulator.h
src/transformation/: CMakeLists.txt  bgtree.cpp  bgtree.h  blocks2commands.cpp  blocks2commands.h  defaulttransformation.h  netlist2tree.cpp  netlist2tree.h  structure2netlist.cpp  structure2netlist.h  transformation.cpp  transformation.h  transformations.cpp  transformations.h  transformationtypeid.h  transformer.cpp  transformer.h  typedtransformation.cpp  typedtransformation.h
src/util/: CMakeLists.txt  any_pointer.h  cached.h  catiterator.h  debug.h  dereference_iterator.h  dictionary.h  dictionaryadapter.h  dictionarybase.h  dictionaryimplbase.h  emptydictionary.h  extensibledictionary.h  fcfsdictionary.h  iterable.h  iterator_pair.h  lexicaldictionary.h  lexicalpointingdictionary.h  list.h  marray.h  marray_eiterator.h  marray_slicing_3D.h  mutabledictionary.h  owningpartitionclass.h  partitionable.h  partitionclassbase.h  pointingpartitionclass.h  remove_any_pointer.h  static_strings.h  staticswitch.h  transparentless.h  util.h  visitable.cpp  visitable.h  visitor.cpp  visitor.h
test/: CMakeLists.txt
test/api/: CMakeLists.txt  construction.cpp  misconstruction.cpp
test/c_api/: CMakeLists.txt  construction.c  construction.cpp  construction.h  gen.sh  ls.c  ls.cpp  ls.h  macros.h  misconstruction.c  misconstruction.cpp  misconstruction.h  namespaces.c  namespaces.cpp  namespaces.h  object_classic.c  object_classic.cpp  object_classic.h  objects.c  objects.cpp  objects.h  strlist.h  utils.c  utils.h
test/internal/: CMakeLists.txt  connection.cpp  construction.cpp  divisivewires.cpp  fixoverlongwires.cpp  netlist.cpp
test/internal/simulation/: CMakeLists.txt  simfuzzer.cpp  simfuzzer.h  simprinter.cpp  simprinter.h  simtester.cpp  simtester.h  simulation.cpp
test/util/: CMakeLists.txt  dictionary.cpp
(+327 files in other folders)
